Updated extension icon to fix icon bug from visual studio gallery. Changed Manifest info. Updated License. Removed useless todo.txt file

--- a/Whut.AttachTo/Whut.AttachTo.csproj
+++ b/Whut.AttachTo/Whut.AttachTo.csproj
@@ -217,7 +217,10 @@
     <None Include="Resources\Images_32bit.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\Package.ico" />
+    <Content Include="Resources\Package.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="..\license.txt">
       <Link>license.txt</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
